--- a/Final Exercise/src/App.css
+++ b/Final Exercise/src/App.css
@@ -3,7 +3,7 @@
   position: absolute;
   width: 100%;
   text-align: center;
-  background-color: lightblue;
+  background-color: rgb(138, 220, 147);
   color: black;
   height: 100px;
   line-height: 100px;
@@ -12,13 +12,32 @@
 
 .mainBar {
     margin-top: 8%;
+    text-align: center  ;
 }
 
 .HomeAndAbout {
-    display: 'inline-flex';
-    gap: '20px';   
-    padding: '10px 20px'; 
-    border: '2px solid black';
-    border-radius: '20px';
-    margin-bottom: '60px';
+    display: inline-flex;
+    gap: 20px;   
+    padding: 10px 20px; 
+    border: 2px solid black;
+    border-radius: 20px;
+    margin-bottom: 60px;
+}
+
+.firstPic {
+    width: 400px; 
+    height: auto;
+    display: block;
+    margin: 0 auto;
+    border-radius: 20px;
+}
+
+.picOfAll {
+  display: flex;
+  gap: 10px; 
+}
+
+.firstPic:hover {
+  transform: scale(1.1);    
+  box-shadow: 0 8px 16px rgba(0,0,0,0.3); 
 }
