--- a/Final Exercise/src/App.css
+++ b/Final Exercise/src/App.css
@@ -79,3 +79,14 @@
 .joinSession button:hover {
   background-color: #021f3d;
 }
+
+.createSessionBtn{
+  padding: 10px 20px;
+  font-size: 20px;
+  background-color: #007bff;
+  color: #fff;
+  border: #000000;
+  border-radius: 10px;
+  cursor: pointer;
+  text-align: center;
+}
